src/objects/Campsite_Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Campsite__c</fullName>
        <description>Campside master detail field</description>
        <inlineHelpText>Please select a Campsite.</inlineHelpText>
        <label>Campsite</label>
        <referenceTo>Campsite__c</referenceTo>
        <relationshipLabel>Campsite Reservations</relationshipLabel>
        <relationshipName>Campsite_Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date field.</description>
        <inlineHelpText>Please select an end date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date field.</description>
        <inlineHelpText>Please select a start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup.</description>
        <inlineHelpText>Please select a user.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campsite_Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campsite Reservation</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Campsite Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campsite Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>